--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,15 @@
   color: black;
   font-family: fantasy;
 }
+.navbar>a{
+  margin: 10px;
+  font-size: 30px;
+  text-decoration: none;
+  color: black;
+  font-family: fantasy;
+}
+.navbar{
+  margin-left: 30px;
+  margin-top: 50px;
+ 
+}
